# rigid-anim-demo

./: CMakeLists.txt  anim.txt  check_gl.h  img_packer.cpp  main.cpp  main1.cpp  man.json  mathpls.h  test.json  test.txt  test_run.txt  tex.cpp
glad/: glad.c  glad.h
skin/: config.txt
